<resources>
    <string name="app_name">Madarsoft Task</string>
    <string name="add_new_user">Add New User\n</string>
    <string name="user_name_req">UserName <font color='#FF0000'>*</font></string>
    <string name="user_age_req">Age <font color='#FF0000'>*</font></string>
    <string name="user_job_title_req">Job Title <font color='#FF0000'>*</font></string>
    <string name="gender_req">Gender <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="username">User Name</string>
    <string name="age">Age</string>
    <string name="_26">26</string>
    <string name="job_title">Job Title</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>

    <string-array name="gender_types">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>