<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#61999999"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewUsernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewAgeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_26"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewJobTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewJobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/software_engineer"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewGenderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>